<resources>
    <string name="app_name">Pick Up Pic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_to_pick_up_pic">Welcome to Pick Up Pic!</string>
    <string name="share_photos_and_be_in_trend">Share pictures and be in trend</string>
    <string name="find_like_minded_people">Find like-minded people</string>
    <string name="and_share_your_experience_of_seeing_art">and share your experience of seeing art</string>
    <string name="increase_interest_in_your_work">Increase interest in your work</string>
    <string name="and_get_fame_on_our_platform">and get fame on our platform</string>
    <string name="get_started">Get started</string>
    <string name="next">Next</string>
    <string name="please_sign_up_to_get_started">Please sign up to get started</string>
    <string name="sign_up">Sign up</string>
    <string name="retry">Retry</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="succes_auth">You have been logged successfully</string>
    <string name="latest">Order by latest</string>
    <string name="oldest">Order by oldest</string>
    <string name="popular">Order by polular</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="back">back</string>
    <string name="username">\@%1$s</string>
    <string name="retry1">Retry</string>
    <string name="error_description">Something went wrong. Try again.</string>
    <string name="made_with">Made with: %1$s</string>
    <string name="model">Model: %1$s</string>
    <string name="exposure">Exposure: %1$s</string>
    <string name="aperture">Aperture: %1$s</string>
    <string name="focal_length">Focal length: %1$s</string>
    <string name="iso">ISO: %1$s</string>
    <string name="about">About \@%1$s:\n%2$s</string>
    <string name="download">Download</string>
    <string name="location">Country: %1$s, City: %2$s</string>
    <string name="tag">Tags: %1$s</string>
    <string name="nickname">nickname</string>
    <string name="name">name</string>
    <string name="feed_photo">Photo</string>
    <string name="location_icon">location icon</string>
    <string name="download_count_icon">download count icon</string>
    <string name="no_connection">no connection</string>
    <string name="photos">Photos\n%1$d</string>
    <string name="likes">Likes \n%1$d</string>
    <string name="collections">Collections \n%1$d</string>
    <string name="search_text">"Are you looking for something?</string>

</resources>