<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/onBoarding_bacground_color1"
    tools:context=".presentation.ui.profile.ProfileFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clToolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvNavTitle"
            android:layout_width="118dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:text="PROFILE"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_baseline_input_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clToolbar">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivAvatar"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/clInfo"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivAvatar"
            app:layout_constraintTop_toTopOf="@id/ivAvatar"
            tools:text="Iskander Faizullin " />

        <ImageView
            android:id="@+id/ivUsername"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_baseline_alternate_email_24"
            app:layout_constraintEnd_toStartOf="@id/tvUsername"
            app:layout_constraintStart_toStartOf="@id/tvName"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/tvLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivUsername"
            app:layout_constraintTop_toTopOf="@id/ivUsername"
            tools:text="f_uckeng" />

        <ImageView
            android:id="@+id/ivLocation"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_baseline_location_on_24"
            app:layout_constraintEnd_toStartOf="@id/tvLocation"
            app:layout_constraintStart_toStartOf="@id/tvName"
            app:layout_constraintTop_toBottomOf="@id/ivUsername" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/tvEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivLocation"
            app:layout_constraintTop_toTopOf="@id/ivLocation"
            tools:text="Russia, St.Petersburg" />

        <ImageView
            android:id="@+id/ivEmail"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_baseline_email_24"
            app:layout_constraintEnd_toStartOf="@id/tvEmail"
            app:layout_constraintStart_toStartOf="@id/tvName"
            app:layout_constraintTop_toBottomOf="@id/ivLocation" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivEmail"
            app:layout_constraintTop_toTopOf="@id/ivEmail"
            app:layout_constraintVertical_bias="0.0"
            tools:text="mail@gmail.com" />

        <View
            android:id="@+id/viewLine"
            android:layout_width="1dp"
            android:layout_height="164dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="7dp"
            android:background="@color/grey_light"
            app:layout_constraintEnd_toStartOf="@+id/tvName"
            app:layout_constraintStart_toEndOf="@+id/ivAvatar"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewLine2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="1dp"
            android:background="@color/grey_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/ivAvatar"
            app:layout_constraintTop_toBottomOf="@+id/ivAvatar" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clStats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="8dp"
        android:background="@color/onBoarding_bacground_color"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toTopOf="@id/vpPhotos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clInfo">

        <TextView
            android:id="@+id/tvPhotoCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photos"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/tvLikeCount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLikeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/likes"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/tvCollectionCount"
            app:layout_constraintStart_toEndOf="@id/tvPhotoCount"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCollectionCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collections"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvLikeCount"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewLine3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/grey_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLikeCount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpPhotos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clStats" />

    <ProgressBar
        android:id="@+id/pbLoading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/onBoarding_bacground_color1"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>